# adventofcode2023

./: .gitignore  README.md
day1/.cache/clangd/index/: main.cpp.9D0048400EF54AB8.idx
day1/src/: CMakeLists.txt  input_test  main.cpp
day10/src/: CMakeLists.txt  main.cpp
day11/src/: CMakeLists.txt  main.cpp
day12/src/: CMakeLists.txt  main.cpp  test2  test3
day2/.cache/clangd/index/: main.cpp.A630BBAAEA0A2480.idx
day2/src/: CMakeLists.txt  main.cpp
day3/.cache/clangd/index/: main.cpp.5E1BCBFB24AC6598.idx
day3/src/: CMakeLists.txt  main.cpp
day4/.cache/clangd/index/: main.cpp.5298B9378FD613FC.idx
day4/src/: CMakeLists.txt  main.cpp  test2
day5/.cache/clangd/index/: main.cpp.91453AADACAD34A7.idx
day5/src/: main.cpp
day6/.cache/clangd/index/: main.cpp.A25625F36C4A5B5F.idx
day6/src/: main.cpp
day7/src/: main.cpp
day8/.cache/clangd/index/: main.cpp.EC124377ECED5B33.idx
day8/src/: main.cpp
day9/.cache/clangd/index/: main.cpp.54E0880C64359FAE.idx  main.cpp.A1B4E734686B7A1F.idx
day9/src/: main.cpp
utils/: utils.cpp  utils.h
